--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.1",
+    "karma-sauce-launcher": "2.0.2",
     "karma-ui5": "^1.1.0",
     "local-web-server": "^3.0.7",
     "rimraf": "^3.0.1"
